--- a/public/feedback.html
+++ b/public/feedback.html
@@ -14,7 +14,7 @@
   <div class="container">
   <div class="row">
     <div class="row">
-      <div class="col s12 m4 l2"><img src="/public/image/logo.png" height="80px" /></div>
+      <div class="col s12 m4 l2"><img src="/image/logo.png" height="80px" /></div>
       <div class="s12 m4 l10">  <h3 class="center-align">GoffeeApp Feedback Form</h3>
   <p class="lead center-align">Hey there, thank you for giving us the feedback</p></div>
     </div>
@@ -37,7 +37,7 @@
 
       <!-- Show this div when the user is not logged in -->
       <div ng-hide="currentUser">
-        <button class="btn btn-success" ng-click="login('google')">
+        <button class="btn btn-success" ng-click="login('github')">
           <span class="glyphicon glyphicon-user"></span>Login to leave feedback.
         </button>
       </div>
