--- a/public/feedback.html
+++ b/public/feedback.html
@@ -12,141 +12,162 @@
 
 <body ng-controller="userController">
   <div class="container">
-  <div class="row">
-    <div class="row">
-      <div class="col s12 m4 l2"><img src="/image/logo.png" height="80px" /></div>
-      <div class="s12 m4 l10">  <h3 class="center-align">GoffeeApp Feedback Form</h3>
-  <p class="lead center-align">Hey there, thank you for giving us the feedback</p></div>
-    </div>
-  </div>
+      <div class="row">
+        <div class="row">
+          <div class="col s12 m4 l2"><img src="/image/logo.png" height="80px" /></div>
+          <div class="s12 m4 l10">  <h3 class="center-align">GoffeeApp Feedback Form</h3>
+              <p class="lead center-align">Hey there, thank you for giving us the feedback</p></div>
+          </div>
+      </div>
 
 
-    <hr />
-    Click here to open our application in another tab<br>
-    Click here to watch our overview video.<br>
+      <hr />
+      Click here to open our application in another tab<br>
+      Click here to watch our overview video.<br>
 
-    <!-- Show this div when the users is logged in -->
-    <!-- <div>
-      You are logged in as: {{currentUser.github.displayName}} <br><br>
-      <button class="btn btn-success" ng-click="editFeedback('new')">
-        <span class="glyphicon"></span>Click here to leave feedback.
-      </button>
-      <button class="btn btn-success" ng-click="logout()">
-        <span class="glyphicon"></span>Logout </button>
-      </div> -->
-
-      <!-- Show this div when the user is not logged in -->
-<!--       <div ng-hide="currentUser">
-        <button class="btn btn-success" ng-click="login('github')">
-          <span class="glyphicon glyphicon-user"></span>Login to leave feedback.
+      <!-- Show this div when the users is logged in -->
+<!--       <div>
+          You are logged in as: {{currentUser.github.displayName}} <br><br>
+          <button class="btn btn-success" ng-click="editFeedback('new')">
+            <span class="glyphicon"></span>Click here to leave feedback.
         </button>
+        <button class="btn btn-success" ng-click="logout()">
+            <span class="glyphicon"></span>Logout </button>
+        </div> -->
+
+        <!-- Show this div when the user is not logged in -->
+<!--         <div ng-hide="currentUser">
+            <button class="btn btn-success" ng-click="login('github')">
+              <span class="glyphicon glyphicon-user"></span>Login to leave feedback.
+          </button>
       </div> -->
 
-    <hr />
-<br  />
-<div >
- <h5 ng-show="edit"><b>Leave Your Feedback</b></h5>
- <h3 ng-hide="edit">Edit User:</h3>
- <button class="btn btn-success" ng-click="editUser('new')">
-  <i class="mdi-content-add-circle left"></i> Leave New Feedback
-</button>
+      <hr />
 
-    <form class="form-horizontal">
-      <div class="form-group">
-        <i class="mdi-action-account-circle prefix"></i>
-        <label class="col-sm-2 control-label">First Name:</label>
-        <div class="col-sm-10">
-          <input type="text" ng-model="newuser.fName" ng-disabled="!edit" placeholder="First Name">
-        </div>
+      <div>
+        Previous team feedback form <a href="https://popcart.herokuapp.com/feedback.html" target="_blank">Team  19</a>.
+        <br />
+        Next team feedback form <a href="http://getxcused.meteor.com/feedback"  target="_blank"> Team 21</a>.
+    </div>
+
+    </hr>
+      <br  />
+      <div >
+       <h5 ng-show="edit"><b>Leave Your Feedback</b></h5>
+
+       <button class="btn btn-success" ng-click="editUser('new', hide_table)" ng-init="hide_table=false" ng-model="hide_table">
+          <i class="mdi-content-add-circle left"></i> Leave New Feedback
+      </button>
+       <h3 ng-hide="edit">Edit User:</h3>
+
+       <form class="form-horizontal" ng-show="hide_table">
+          <div class="form-group">
+            <i class="mdi-action-account-circle prefix"></i>
+            <label class="col-sm-2 control-label">First Name:</label>
+            <div class="col-sm-10">
+              <input type="text" ng-model="newuser.fName" ng-disabled="!edit" placeholder="First Name">
+          </div>
       </div>
       <div class="form-group">
         <i class="mdi-action-account-circle prefix"></i>
         <label class="col-sm-2 control-label">Last Name:</label>
         <div class="col-sm-10">
           <input type="text" ng-model="newuser.lName" ng-disabled="!edit" placeholder="Last Name">
-        </div>
       </div>
-      <div class="form-group">
-        <i class="mdi-social-school"></i>
-        <label class="col-sm-2 control-label">School:</label>
-        <div class="col-sm-10">
-          <input type="text" ng-model="newuser.school" ng-disabled="!edit" placeholder="School (e.g SOB)">
-        </div>
-      </div>
-      <div class="form-group">
-        <i class="mdi-communication-email"></i>
-        <label class="col-sm-2 control-label">Email:</label>
-        <div class="col-sm-10">
-          <input type="text" ng-model="newuser.email" ng-disabled="!edit" placeholder="SMU Email">
-        </div>
-      </div>
-      <div class="form-group">
-        <i class="mdi-communication-textsms"></i>
-        <label class="col-sm-2 control-label">Feedback:</label>
-        <div class="col-sm-10">
-          <textarea rows="4" ng-model="newuser.feedback" ng-disabled="!edit" placeholder="Feedback"></textarea>
-        </div>
-      </div>
+  </div>
+  <div class="form-group">
+    <i class="mdi-social-school"></i>
+    <label class="col-sm-2 control-label">School:</label>
+    <div class="col-sm-10">
+      <input type="text" ng-model="newuser.school" ng-disabled="!edit" placeholder="School (e.g SOB)">
+  </div>
+</div>
+<div class="form-group">
+    <i class="mdi-communication-email"></i>
+    <label class="col-sm-2 control-label">Email:</label>
+    <div class="col-sm-10">
+      <input type="text" ng-model="newuser.email" ng-disabled="!edit" placeholder="SMU Email">
+  </div>
+</div>
+<div class="form-group">
+    <i class="mdi-communication-textsms"></i>
+    <label class="col-sm-2 control-label">Feedback #1: What we should start doing?</label>
+    <div class="col-sm-10">
+      <textarea rows="4" ng-model="newuser.feedback" ng-disabled="!edit" placeholder="Feedback"></textarea>
+  </div>
+  <div class="form-group">
+    <i class="mdi-communication-textsms"></i>
+    <label class="col-sm-2 control-label">Feedback #2: What we should stop doing?</label>
+    <div class="col-sm-10">
+      <textarea rows="4" ng-model="newuser.feedback2" ng-disabled="!edit" placeholder="Feedback"></textarea>
+  </div>
+  <div class="form-group">
+    <i class="mdi-communication-textsms"></i>
+    <label class="col-sm-2 control-label">Feedback #2: What we should continue doing?</label>
+    <div class="col-sm-10">
+      <textarea rows="4" ng-model="newuser.feedback3" ng-disabled="!edit" placeholder="Feedback"></textarea>
+  </div>
+</div>
 
-    </form>
+</form>
 
-    <hr>
+<hr>
 
 <!--     <button class="btn btn-success"  ng-click="editUser(new)">
     <i class="mdi-av-replay left"></i>Reset
-   </button> -->
-
-    <button class="btn btn-success"  ng-click="save()">
-     <i class="mdi-content-save left"></i>Save Feedback
-   </button>
-
-    <hr />
-    <br />
-    <h5><b>Feedbacks</b></h5>
-
-    <table class="table table-striped">
-      <thead>
-        <tr>
-          <th>No.</th>
-          <th>First Name</th>
-          <th>Last Name</th>
-          <th>School</th>
-          <th>Email</th>
-          <th>Feedback</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr ng-repeat="user in users">
-          <td>{{ $index + 1 }} </td>
-          <td>{{ user.fName }}</td>
-          <td>{{ user.lName }}</td>
-          <td>{{ user.school }}</td>
-          <td>{{ user.email }} </td>
-          <td>{{ user.feedback }} </td>
-          <td>
-            <button class="btn" ng-click="editUser(user.$id)">
-              <!-- <span class="glyphicon glyphicon-pencil"></span> -->  Edit
-            </button>
-          </td>
-          <td>
-            <button class="btn" ng-click="deleteUser($index)">
-             <!--  <i  class="mdi-action-delete left"></i> -->Delete
-            </button>
-          </td>
-        </tr>
-      </tbody>
-    </table>
-<div>
-    <hr>
-    Previous team feedback form <a href="http://www.google.com" target="_blank">here</a>.
-    <br />
-    Next team feedback form <a href="http://www.google.com"> here</a>.
-  </div>
+</button> -->
 
 
-  <script>
-   var myApp = angular.module("myApp", ["firebase"]);
-   myApp.controller('userController', ['$scope', '$firebase',
+
+
+<button class="btn btn-success"  ng-click="save()">
+   <i class="mdi-content-save left"></i>Save Feedback
+</button>
+
+<hr />
+<br />
+<h5><b>Feedbacks</b></h5>
+
+<table class="table table-striped">
+  <thead>
+    <tr>
+      <th>No.</th>
+      <th>First Name</th>
+      <th>Last Name</th>
+      <th>School</th>
+      <th>Email</th>
+      <th>Feedback#1</th>
+      <th>Feedback#2</th>
+      <th>Feedback#3</th>
+  </tr>
+</thead>
+<tbody>
+    <tr ng-repeat="user in users">
+      <td>{{ $index + 1 }} </td>
+      <td>{{ user.fName }}</td>
+      <td>{{ user.lName }}</td>
+      <td>{{ user.school }}</td>
+      <td>{{ user.email }} </td>
+      <td>{{ user.feedback }} </td>
+      <td>{{ user.feedback2 }} </td>
+      <td>{{ user.feedback3 }} </td>
+<!--       <td>
+        <button class="btn" ng-click="editUser(user.$id)">
+          <span class="glyphicon glyphicon-pencil"></span>  Edit
+      </button>
+  </td>
+  <td>
+    <button class="btn" ng-click="deleteUser($index)">
+      <i  class="mdi-action-delete left"></i>Delete
+  </button>
+</td> -->
+</tr>
+</tbody>
+</table>
+
+<script>
+ var myApp = angular.module("myApp", ["firebase"]);
+ myApp.controller('userController', ['$scope', '$firebase',
 
     function($scope, $firebase) {
       $scope.newuser = {};
@@ -157,6 +178,8 @@
       $scope.school = '';
       $scope.email = '';
       $scope.feedback = '';
+      $scope.feedback2 = '';
+      $scope.feedback3 = '';
 
     //We can replace this with a Firebase url later on.
     var ref = new Firebase("https://feeback.firebaseio.com/");
@@ -176,7 +199,14 @@
     $scope.incomplete = false;
 
 
-    $scope.editUser = function(id) {
+    $scope.editUser = function(id, state_hidden) {
+        debugger;
+        if(state_hidden) {
+                $scope.hide_table = false;
+        } else {
+            $scope.hide_table = true;
+        }
+
       $scope.currentId = id;
       if (id == 'new') {
         $scope.edit = true;
@@ -186,61 +216,63 @@
         $scope.newuser.school = '';
         $scope.newuser.email = '';
         $scope.newuser.feedback = '';
+        $scope.newuser.feedback2 = '';
+        $scope.newuser.feedback3 = '';
         console.log("new user.");
-      } else {
+    } else {
         $scope.edit = true;
         $scope.newuser = $firebase(ref.child("user").child(id)).$asObject();
         console.log("existing user.");
-      }
-    };
+    }
+};
 
-    $scope.save = function(){
+$scope.save = function(){
       //Add new if no index is passed in.
 
       if($scope.currentId=='new'){
         //Using the array length as the next index while prototyping.
         $scope.users.$add($scope.newuser);
-      }
-      else{
+    }
+    else{
         $scope.newuser.$save();
-      }
-    };
-
-     $scope.currentUser = null;
-    //Check to see if the users is already logged in to Firebase and update currentUser if yes.
-    var authData = ref.getAuth();
-      if (authData && authData!={}) {
-          $scope.currentUser = $firebase(ref.child("user").child(authData.uid)).$asObject();
-      } else {
-          console.log("User is logged out");
-      }
-
-    $scope.logout = function(loginProvider){
-        $scope.currentUser = null;
     }
+};
 
-    $scope.login = function(loginProvider){
-          ref.authWithOAuthPopup(loginProvider, function(error, authData) {
-            if (error) {
-              console.log("Login Failed!", error);
-            } else {
-              console.log("Authenticated successfully with payload:", authData);
-              //Add the user to the users list.
-              ref.child("user/"+authData.uid).transaction(function(currentValue) {
-                  return authData;
-                });
-              $scope.currentUser = $firebase(ref.child("user").child(authData.uid)).$asObject();
-              $scope.users = $firebase(ref.child("feedback")).$asArray();
-            }
-          });
-        }
 
-    $scope.deleteUser = function(index){
-      $scope.users.$remove(index);
-      console.log("removing "+index);
-    }
+// $scope.currentUser = null;
+//     //Check to see if the users is already logged in to Firebase and update currentUser if yes.
+//     var authData = ref.getAuth();
+//     if (authData && authData!={}) {
+//       $scope.currentUser = $firebase(ref.child("user").child(authData.uid)).$asObject();
+//   } else {
+//       console.log("User is logged out");
+//   }
 
-  }]);
+//   $scope.logout = function(loginProvider){
+//     $scope.currentUser = null;
+// }
+
+// $scope.login = function(loginProvider){
+//   ref.authWithOAuthPopup(loginProvider, function(error, authData) {
+//     if (error) {
+//       console.log("Login Failed!", error);
+//   } else {
+//       console.log("Authenticated successfully with payload:", authData);
+//               ref.child("user/"+authData.uid).transaction(function(currentValue) {
+//                   return authData;
+//               });
+//               $scope.currentUser = $firebase(ref.child("user").child(authData.uid)).$asObject();
+//               $scope.users = $firebase(ref.child("feedback")).$asArray();
+//           }
+//       });
+// }
+
+$scope.deleteUser = function(index){
+  $scope.users.$remove(index);
+  console.log("removing "+index);
+}
+
+}]);
 
 </script>
   <!--Here is a way to take a quick peek at your data.
@@ -252,25 +284,12 @@
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
     (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
     m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-  ga('create', 'UA-55493881-2', 'auto');
-  ga('send', 'pageview');
+ga('create', 'UA-55493881-2', 'auto');
+ga('send', 'pageview');
 
 </script>
 
 </body>
 </html>
-
-
-
-
-
-
-
-
-
-
-
-
-
