Update application URL link

--- a/public/index.html
+++ b/public/index.html
@@ -22,8 +22,8 @@
 
 
       <hr />
-      Click here to open our application in another tab<br>
-      Click here to watch our overview video.<br>
+      Click <a href="http://goffeeweb.herokuapp.com/" target="_blank"> here </a> to open our landing site and application<br>
+      Click <a href="http://youtube.com/" target="_blank"> here </a> to watch our overview video.<br>
 
       <!-- Show this div when the users is logged in -->
 <!--       <div>
