update youtube URL

--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,7 @@
 
       <hr />
       Click <a href="http://goffeeweb.herokuapp.com/" target="_blank"> here </a> to open our landing site and application<br>
-      Click <a href="http://youtube.com/" target="_blank"> here </a> to watch our overview video.<br>
+      Click <a href="http://youtu.be/Y-W5NzadwU8" target="_blank"> here </a> to watch our overview video.<br>
 
       <!-- Show this div when the users is logged in -->
 <!--       <div>
